<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#206871"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="184dp"
        android:layout_height="70dp"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="188dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="52dp"
        android:background="#952B2B"
        android:onClick="onButtonClick"
        android:text="Comparar"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="205dp"
        android:layout_height="71dp"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="Ingrese una palabra"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="210dp"
        android:layout_height="68dp"
        android:layout_marginStart="102dp"
        android:layout_marginBottom="80dp"
        android:contentDescription=""
        android:ems="10"
        android:hint="Ingrese otra palabra"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>